fix header overflow

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -99,7 +99,8 @@ body {
 	margin: 0 auto;
 	padding: 15px;
 	position: relative;
-	overflow: hidden;
+
+
 }
 
 
