--- a/sass/_body.scss
+++ b/sass/_body.scss
@@ -38,3 +38,7 @@ body {
 	bottom: calc(50% - 7px);
 	left: calc(50% - 7px);
 }
+
+.overflow {
+	overflow: hidden;
+}
