--- a/sass/layouts/_price.scss
+++ b/sass/layouts/_price.scss
@@ -12,6 +12,7 @@
 
 .price-table {
 	margin: 0 auto 30px;
+	width: 100%;
 }
 
 th {
