--- a/sass/layouts/_separators.scss
+++ b/sass/layouts/_separators.scss
@@ -2,8 +2,7 @@
 	background-color: $color-additional;
 	padding: 10px 0;
 	text-align: center;
-	width: 100vw;
-	overflow-x: hidden;
+
 }
 
 .title__content {
